# dialogflow

./: .gitignore  CMakeLists.txt  Hey-Rico_en_linux_v2_1_0.ppn  README.md  package.xml
data/: files.txt
data/container/: data.txt
html/: chat.html  simple.html
launch/: extended_vad.launch  fallback_action.launch  speech_to_text.launch  text_to_speech.launch  vad.launch  voice_communication.launch  websocket.launch
nodes/: asker.py  extended_vad.py  fallback_action_runner.py  human_time.py  speech_to_text.py  talker.py  text_to_speech.py  vad.py  voice_communication.py
