<?xml version="1.0"?>
<package format="2">
  <name>dialogflow</name>
  <version>1.0.0</version>
  <description>The dialogflow package</description>

  <maintainer email="wstyczen@gmail.com">wstyczen</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- General ROS packages -->
  <build_depend>rospy</build_depend>
  <build_depend>rospkg</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rospkg</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>rospkg</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- My packages -->
  <build_depend>human_interactions</build_depend>
  <build_depend>sound_processing</build_depend>

  <build_export_depend>human_interactions</build_export_depend>
  <build_export_depend>sound_processing</build_export_depend>

  <exec_depend>human_interactions</exec_depend>
  <exec_depend>sound_processing</exec_depend>

  <export>

  </export>
</package>
